--- a/Nextap/backend/package.json
+++ b/Nextap/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "A backend service for Nextap",
   "main": "index.js",
   "directories": {
     "test": "tests"
@@ -9,9 +10,8 @@
     "start": "node src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Your Name",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -21,8 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
+    "swagger-ui-express": "^5.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
