--- a/Nextap/backend/package.json
+++ b/Nextap/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "@vercel/node": "^3.2.27",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
